service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: minio
  name: minio
spec:
  selector:
    app: minio
  ports:
  - port: 9001
    protocol: TCP
    targetPort: 9001
  type: ClusterIP
status:
  loadBalancer: {}


---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: web
  name: web
spec:
  selector:
    app: web
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
status:
  loadBalancer: {}
